src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
/* ... */
    .animbrand a::before {
        -moz-transform: translateX(50px);
        -webkit-transform: translateX(50px);
        content: '<';
        transform: translateX(50px)
    }

    .animbrand a::after {
        -moz-transform: translateX(-50px);
        -webkit-transform: translateX(-50px);
        content: '>';
        transform: translateX(-50px)
    }

    .animbrand a:focus::after, .animbrand a:focus::before, .animbrand a:hover::after, .animbrand a:hover::before {
        -moz-transform: translateX(0);
        -webkit-transform: translateX(0);
        opacity: 0.9;
        transform: translateX(0)
    }

div.animbrand a:focus, div.animbrand a:hover {
    outline: 0
}

.article-post-summary {
    position: relative;
}

.post-date-box {
    font-family: SairaSemiCondensed-Bold;
    position: absolute;
    width: 70px;
    border: 1px solid var(--moonglade-accent-color1);
    border-radius: 3px;
}

.post-date-day {
    color: var(--moonglade-accent-color1);
    font-size: 42px;
    height: 58px;
    margin: 0;
    padding-right: 7px;
    text-align: right;
}

.post-date-month {
    background-color: var(--moonglade-accent-color1);
    color: #fff;
    padding: 1px 10px;
    text-align: right;
}

.post-summary-title {
    margin-bottom: 15px;
    font-size: 18px;
}

.post-summary-box {
    display: block;
    margin-left: 105px;
}

.post-summary-text {
    line-height: 24px;
    word-break: break-all;
    word-wrap: break-word;
}

.post-summary-tags {
    margin-bottom: -10px;
    padding-top: 10px;
}

    .post-summary-tags a {
        background-color: var(--moonglade-accent-color1);
        color: #fff;
        display: inline-block;
        font-size: 0.75rem;
        margin-bottom: 10px;
        margin-right: 10px;
        padding: 5px 10px;
    }

        .post-summary-tags a:hover {
            background-color: var(--moonglade-accent-color3);
            color: #fff;
        }

.blog-info-desktop-lg {
    background: #fafafa;
    border-radius: 3px;
    color: #fff;
    overflow: hidden;
    position: relative;
}

.btn-profile-about {
    border-radius: 0 0 3px 3px;
}

.card-bkimg-container {
    height: 310px;
    overflow: hidden;
}

.card-bkimg {
    -moz-filter: blur(30px);
    -webkit-filter: blur(30px);
    filter: blur(30px);
    margin-left: -69px;
    margin-top: -57px;
    min-width: 150%;
}

.blogger-head-pic {
    border: 5px solid rgba(255,255,255,.5);
    height: 110px;
    width: 110px;
}

.blog-info-photo-text {
    padding-top: 40px;
    position: absolute;
    top: 32px;
    width: 100%;
    z-index: 999;
}

.blog-info-desktop-lg h3 {
    color: #fff;
    font-family: SairaSemiCondensed-Bold;
}

a {
    color: var(--moonglade-accent-color1);
    text-decoration: none;
}

    a:hover,
    a:focus {
        color: var(--moonglade-accent-color1);
        text-decoration: none;
    }

.bg-moonglade-accent1 {
    background-color: var(--moonglade-accent-color1);
}

.bg-moonglade-accent2 {
    background-color: var(--moonglade-accent-color2);
}

.bg-moca-dark {
    background-color: #171717;
}

.navbar {
    box-shadow: 0 0 8px #666;
    padding: .4rem 1rem
}

.nav-item {
    margin: 0 1rem 0 0;
}

footer {
    color: rgba(255,255,255,0.5);
    padding-bottom: 20px;
    padding-top: 20px;
}

    footer .container h4 {
        color: rgba(255,255,255, 0.6);
        font-size: 20px;
        font-weight: lighter;
        margin-bottom: 31px;
        text-transform: uppercase;
    }

.form-control#term {
    border-width: 0;
    box-shadow: none;
    color: #fff;
    margin-right: 0 !important;
    width: 226px;
}

    .form-control#term::-webkit-input-placeholder {
        color: white !important;
    }

    .form-control#term:-moz-placeholder { /* Firefox 18- */
        color: white !important;
    }

    .form-control#term::-moz-placeholder { /* Firefox 19+ */
        color: white !important;
    }

    .form-control#term:-ms-input-placeholder {
        color: white !important;
    }

.form-control#search:focus {
    -ms-box-shadow: none;
    -webkit-box-shadow: none;
    border-color: var(--moonglade-accent-color1);
    box-shadow: none;
}

.search-form {
    background: rgba(255, 255, 255, .2);
    border-radius: 3px;
}

.btn-search {
    background: transparent;
    border: 0 none;
    font-size: 1.3rem;
    height: 36px;
    padding: 0 0.6rem;
}

.btn-primary {
    background-color: #124078;
    border-color: #0e315d;
}

.page-link {
    color: var(--moonglade-accent-color1);
}

.comment-form-containter .badge {
    font-size: 100% !important;
}

.nav-item-non-margin {
    margin: 0 0;
}

.dropdown-menu {
    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
}

.navbar .dropdown-menu {
    background-color: var(--moonglade-accent-color1);
    border: 0;
    color: #fff;
    font-size: 0.9rem;
}

    .navbar .dropdown-menu .dropdown-item {
        color: #FFF;
        line-height: 1.7rem;
    }

.navbar .dropdown-item.active, .dropdown-item:hover {
    background-color: var(--moonglade-accent-color3);
    color: #fff;
    text-decoration: none;
}

footer a {
    color: rgba(255,255,255,0.7);
}

    footer a:hover {
        color: #FFF;
    }

.qrcode-link a {
    color: rgba(255,255,255,0.5);
    cursor: pointer;
    display: inline-block;
    font-size: 25px;
    margin-right: 10px;
}

    .qrcode-link a:hover {
        color: #FFF;
    }

html, body {
    height: 100%;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background: #CECECE;
}

::selection {
    background-color: rgba(43, 87, 154, .15);
    color: inherit;
    text-shadow: none;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei";
    font-size: 0.9rem;
    padding-top: 50px;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5 {
    font-weight: normal;
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255,255,255,.7);
}
/* ... */

